--- a/course-03/exercises/udacity-c3-deployment/k8s/env-configmap.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/env-configmap.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  AWS_BUCKET: ___INSERT_AWS_BUCKET___
-  AWS_PROFILE: ___INSERT_AWS_PROFILE___
-  AWS_REGION: ___INSERT_AWS_REGION___
-  JWT_SECRET: ___INSERT_JWT_SECRET___
-  POSTGRESS_DB: ___INSERT_POSTGRESS_DB___
-  POSTGRESS_HOST: ___INSERT_POSTGRESS_HOST___
+  AWS_BUCKET: nanogram
+  AWS_PROFILE: default
+  AWS_REGION: ap-southeast-1
+  JWT_SECRET: asupersecretsecret
+  POSTGRESS_DB: udagram
+  POSTGRESS_HOST: udagram.caam2ptmjaby.ap-southeast-1.rds.amazonaws.com
   URL: http://localhost:8100  
 metadata:
   name: env-config
