--- a/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/reverseproxy-deployment.yaml
@@ -1,16 +1,22 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     service: reverseproxy
   name: reverseproxy
 spec:
+  selector:
+    matchLabels:
+      service: reverseproxy
   replicas: 2
   template:
     metadata:
       labels:
         service: reverseproxy
     spec:
+      selector:
+        matchLabels:
+          service: reverseproxy
       containers:
       - image: whitepilcrow/reverseproxy
         name: reverseproxy
